Add new touched cleanup case
Regression test for [https://github.com/ethereumjs/ethereumjs-vm/pull/335](https://github.com/ethereumjs/ethereumjs-vm/pull/335]

First call marks an empty account as touched. Second call errors OOG. Transaction should still cleanup empty account.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "tests"]
 	path = tests
-	url = https://github.com/ethereum/tests
-	branch = develop
+	url = https://github.com/mattdean-digicatapult/tests
+	branch = add-new-touched-cleanup-case
